# maemo-kodi-remote

./: CMakeLists.txt  README.md
debian/: changelog  control  rules
src/: CMakeLists.txt  about.cpp  about.h  about.ui  assets.qrc  ctx.cpp  ctx.h  kodisettings.cpp  kodisettings.h  kodisettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remotewindow.cpp  remotewindow.h  remotewindow.ui  settings.cpp  settings.h
src/assets/: kodiping.sh  kodiscan.sh
src/lib/: config.cpp  config.h  logger.cpp  logger.h  utils.cpp  utils.h
src/lib/network/: httpkodi.cpp  httpkodi.h  network.cpp  network.h
src/models/: KodiSrc.cpp  KodiSrc.h
src/overview/: OverviewModel.cpp  OverviewModel.h  overviewRichDelegate.css  overviewwidget.cpp  overviewwidget.h  overviewwidget.ui
src/qml/: main.qml
src/qml/lib/: DialogInput.qml  DialogList.qml  DialogMessage.qml  FontAwesome.qml  OneSidedRoundedRectangle.qml  StackViewFancy.qml  TextPlain.qml
